# bazel-github-actions-cache

./: .bazelrc  .gitattributes  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  action.yaml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: bazel-my-cache.yaml
protoc-gen-ts/: index.bzl
src/: ActionsCache.ts  GrpcServer.ts  HttpServer.ts  main.ts
tools/buildifier/: BUILD.bazel
