load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "main",
    srcs = [
        "src/ActionsCache.ts",
        "src/HttpServer.ts",
        "src/main.ts",
    ],
    deps = [
        "//:node_modules/@actions/core",
        "//:node_modules/@actions/http-client",
        "//:node_modules/@types/node",
    ],
)

esbuild(
    name = "main_bundle",
    srcs = [":main"],
    entry_point = "src/main.js",
    minify = True,
    platform = "node",
    sourcemap = "external",
)

write_source_files(
    name = "dist",
    files = {"dist/main.js": ":main_bundle.js"},
)
