load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "main",
    srcs = [
        "src/ActionsCache.ts",
        "src/HttpServer.ts",
        "src/main.ts",
        "//:remote_execution_ts",
    ],
    deps = [
        "//:node_modules/@actions/core",
        "//:node_modules/@actions/http-client",
        "//:node_modules/@types/node",
        "//:node_modules/@types/google-protobuf",
        "//:node_modules/google-protobuf",
        "//:node_modules/@grpc/grpc-js",
    ],
)

esbuild(
    name = "main_bundle",
    srcs = [":main"],
    entry_point = "src/main.js",
    minify = True,
    platform = "node",
    sourcemap = "external",
)

write_source_files(
    name = "dist",
    files = {"dist/main.js": ":main_bundle.js"},
)

load("//:protoc-gen-ts/index.bzl", "ts_proto_library")

ts_proto_library(
    name = "remote_execution_ts",
    deps = [
        "@remote_apis//build/bazel/remote/execution/v2:remote_execution_proto",
    ],
    outs = [
        "build/bazel/remote/execution/v2/remote_execution.ts",
        "google/longrunning/operations.ts",
        "google/api/annotations.ts",
        "google/api/http.ts",
        "google/rpc/status.ts",
        "google/protobuf/any.ts",
        "google/protobuf/timestamp.ts",
        "google/protobuf/wrappers.ts",
        "google/protobuf/duration.ts",
        "google/protobuf/empty.ts",
        "google/protobuf/descriptor.ts",
        "build/bazel/semver/semver.ts",
    ],
    visibility = ["//visibility:public"],
)
